[chore] Migrate to Micronaut